working on detail functionality

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --slightGreen: 	#208000;
 }
 body {
-  font-family: 'Spectral', sans-serif !important;
+  font-family: 'Lexend Deca', sans-serif !important;
   background: var(--mainWhite) !important;
   color: var(--mainDark) !important;
 }
